fix <br> spacing for chrome

--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -31,6 +31,8 @@
 }
 
 .text br {
+  content: "";
+  display: block;
   margin-bottom: 0.625rem;
 }
 
