--- a/src/styles/results.module.css
+++ b/src/styles/results.module.css
@@ -38,6 +38,8 @@
 }
 
 .box br {
+  content: "";
+  display: block;
   margin-bottom: 0.625rem;
 }
 
